--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/test-webgl.loader.js";
+      var loaderUrl = buildUrl + "/markofrancuski.github.io.loader.js";
       var config = {
-        dataUrl: buildUrl + "/test-webgl.data.gz",
-        frameworkUrl: buildUrl + "/test-webgl.framework.js.gz",
-        codeUrl: buildUrl + "/test-webgl.wasm.gz",
+        dataUrl: buildUrl + "/markofrancuski.github.io.data.br",
+        frameworkUrl: buildUrl + "/markofrancuski.github.io.framework.js.br",
+        codeUrl: buildUrl + "/markofrancuski.github.io.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Test_WebGL",
